=======
CHANGES
=======

3.8.4 (unreleased)
------------------

- Nothing changed yet.


3.8.3 (2009-07-11)
------------------

- Removed unnecessary dependency on ``zope.app.interface``.


3.8.2 (2009-05-22)
------------------

- Fix missing import in ``zope.app.component.metadirectives``.


3.8.1 (2009-05-21)
------------------

- Add deprecation note.

3.8.0 (2009-05-21)
------------------

- IMPORTANT: this package is now empty except for some ZMI definitions
  in zope.app.component.browser. Functionality from this package has
  been moved to ``zope.site``, ``zope.componentvocabulary`` and
  ``zope.component``, so preferably import from those locations.

- zope.componentvocabulary has the vocabulary implementations that
  were in zope.app.componentvocabulary now, import them from there for
  backwards compatibility.

- moved zope:resource and zope:view directive implementation and tests
  over into zope.component [zcml].

3.7.0 (2009-04-01)
------------------

- Removed deprecated `zope:defaultView` directive and its
  implementation.  New directive to set default view is
  `browser:defaultView`.

3.6.1 (2009-03-12)
------------------

- Make ``class`` directive schemas importable from old location,
  raising a deprecation warning. It was moved in the previous release,
  but some custom directives could possibly use its schemas.

- Deprecate import of ClassDirective to announce about new location.

- Change package's mailing list address to zope-dev at zope.org,
  because zope3-dev at zope.org is now retired.

- Adapt to the move of IDefaultViewName from zope.component.interfaces
  to zope.publisher.interfaces.

3.6.0 (2009-01-31)
------------------

- Moved the implementation of the <class> directive from this package to
  `zope.security`.  In particular, the module
  `zope.app.component.contentdirective` has moved to
  `zope.security.metaconfigure`, and a compatibility import has been
  left in its place.
