@@ -77,7 +77,6 @@ setup(name='zope.app.component',
           'zope.i18nmessageid',
           'zope.interface',
           'zope.lifecycleevent',
-          'zope.location>3.4.0b1',
           'zope.publisher>=3.6.0',
           'zope.schema',
           'zope.security',
